--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
 
   <footer class="footer text-faded text-center py-5">
     <div class="container">
+      <a href="https://www.easycounter.com/">
+<img src="https://www.easycounter.com/counter.php?destland"
+border="0" alt="установить счетчик посещений"></a>
+<br><a href="https://www.easycounter.com/">бесплатный счетчик</a>
+
       <p class="m-0 small">Copyright &copy; Your Website 2020</p>
     </div>
   </footer>
