--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-158068559-2"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-54E19YW9Y1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-158068559-2');
+  gtag('config', 'G-54E19YW9Y1');
 </script>
 
   <meta charset="utf-8">
