--- a/index.html
+++ b/index.html
@@ -104,12 +104,28 @@
   <footer class="footer text-faded text-center py-5">
     <div class="container">
   
-
+<!-- EasyCounter  -->
 <img src="https://www.easycounter.com/counter.php?destland"
 border="0" alt="установить счетчик посещений">
-
+<!-- EasyCounter -->
 
       <p class="m-0 small">Copyright &copy; Your Website 2020</p>
+      <!-- MyCounter v.2.0 -->
+<script type="text/javascript"><!--
+my_id = 171924;
+my_width = 88;
+my_height = 31;
+my_alt = "MyCounter - счётчик и статистика";
+//--></script>
+<script type="text/javascript"
+  src="https://get.mycounter.ua/counter2.0.js">
+</script><noscript>
+<a target="_blank" href="https://mycounter.ua/"><img
+src="https://get.mycounter.ua/counter.php?id=171924"
+title="MyCounter - счётчик и статистика"
+alt="MyCounter - счётчик и статистика"
+width="88" height="31" border="0" /></a></noscript>
+<!--/ MyCounter -->
     </div>
   </footer>
 
