--- a/index.html
+++ b/index.html
@@ -131,6 +131,24 @@ alt="MyCounter - счётчик и статистика"
 width="88" height="51" border="0" /></a></noscript>
 <!--/ MyCounter -->
       
+      <!-- MyCounter v.2.0 -->
+<script type="text/javascript"><!--
+my_id = 171924;
+my_width = 88;
+my_height = 51;
+my_alt = "MyCounter - счётчик и статистика";
+my_img = 'a';
+//--></script>
+<script type="text/javascript"
+  src="http://scripts.mycounter.ua/counter2.0.js">
+</script><noscript>
+<a target="_blank" href="https://mycounter.ua/"><img
+src="http://get.mycounter.ua/counter.php?id=171924"
+title="MyCounter - счётчик и статистика"
+alt="MyCounter - счётчик и статистика"
+width="88" height="51" border="0" /></a></noscript>
+<!--/ MyCounter -->
+      
     </div>
   </footer>
 
